# SlamtecCHOP-MacOS

./: .gitignore  CMakeLists.txt  Makefile  Parameters.h  README.md  SlamtecCHOP.cpp  SlamtecCHOP.h
drvlogic/: RPLidarDevice.cpp  RPLidarDevice.h
plugin/Slamtec.plugin/Contents/: Info.plist
plugin/Slamtec.plugin/Contents/MacOS/: Slamtec
